(PC-36525)[PRO] style: Fixing alignment issues.

--- a/pro/src/pages/Signup/SignupContainer/SignupContainer.module.scss
+++ b/pro/src/pages/Signup/SignupContainer/SignupContainer.module.scss
@@ -48,10 +48,6 @@
   }
 }
 
-.text-input {
-  margin-bottom: rem.torem(24px);
-}
-
 .signup-form-group {
   flex: 1;
 }
